Fix UTM spacing

--- a/src/styles/pages/sites/[site_id]/recordings/_index.scss
+++ b/src/styles/pages/sites/[site_id]/recordings/_index.scss
@@ -168,6 +168,10 @@
 
           &.has-sub-menu {
             padding: 0;
+
+            .label {
+              margin: .75rem .75rem 0 .75rem;
+            }
           }
 
           .actions {
